About:newtab does not maintain the scroll position after navigating back to the page
Categories
(Firefox :: New Tab Page, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox75 | --- | unaffected |
firefox76 | --- | unaffected |
firefox77 | --- | verified |
People
(Reporter: vvalentina, Assigned: mconley)
References
Details
Attachments
(2 files)
[Affected versions]:
- Firefox Nightly 77.0a1 Build ID 20200414214610;
[Affected Platforms]:
- Windows 10
- Mac OS 10.15.3
- Ubuntu 18.04 x64
[Prerequisites]:
- Have an en-US locale build;
- Have the “browser.search.region” pref set to “US”;
- Have the “browser.tabs.remote.separatePrivilegedContentProcess” pref set to “true”;
[Steps to reproduce]:
- Open the browser with the profile from prerequisites.
- Open about:newtab page.
- Scroll down the page and click on a popular link.
- Go back to about:newtab.
- Observe scroll position.
[Expected result]:
- Scroll position is in the Popular links area.
[Actual result]:
- Scroll position is not maintained. (scroll position is on top of the page)
[Regression range]:
-
Last good revision: 3004bc7597a088e181fbcb9a9044b8d952e9d45f
-
First bad revision: 5b47cfcab1554c89400b7a6299ff0cabac4bda0c
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=3004bc7597a088e181fbcb9a9044b8d952e9d45f&tochange=5b47cfcab1554c89400b7a6299ff0cabac4bda0c -
Seems like Bug 1617983 stands out and might caused this behavior;
[Additional notes:]
- Reproducible also while clicking a Recommended by Pocket/ Highlight cards and coming back to the page;
- No matter the value of the “browser.tabs.remote.separatePrivilegedContentProcess” pref (true/false) we encounter an old issue that stands for not keeping the scroll position only the first time a user comes back to the page.
@mconley can you please take a look on this?
Assignee | ||
Comment 1•5 years ago
|
||
This looks like a general problem that has existed for a while - when we do process flipping, we don't seem to restore scroll position correctly after the navigateAndRestore step of the process flip.
I'm going to see if this has always been a problem, or is a result of recent Fission efforts in SessionStore.
Assignee | ||
Comment 2•5 years ago
|
||
So, I think this is a general problem where when process flipping, we don't restore the correct layout history state.
STR:
- Enable Fission (
fission.autostart
totrue
) and restart the browser - Visit https://www.mikeconley.ca/blog
- Scroll halfway down the page
- In the URL bar, type in https://www.mozilla.org and press Enter
- After the mozilla.org page, click on the back button
ER:
The scroll position on mikeconley.ca should be restored.
AR:
The scroll position on mikeconley.ca is not restored.
Interestingly, if I cause a navigation to occur in the mikeconley.ca domain / process after I've changed the scrollposition, then this scroll position is correctly restored. Here are those steps:
STR:
- Enable Fission (
fission.autostart
totrue
) and restart the browser - Visit https://www.mikeconley.ca/blog
- Scroll halfway down the page
- In the URL bar, type in https://mikeconley.ca/blog/about/ and press Enter
- Click back. Note how the scroll position is restored.
- In the URL bar, type in https://www.mozilla.org and press Enter
- After the mozilla.org page, click on the back button
Using these steps, the correct scroll position is restored... what's going on here? AnnyG, do you know? Or do you know who I should ask?
Assignee | ||
Comment 3•5 years ago
|
||
Bonus question - is there a known bug for failing to restore scroll positions when navigating like this? I feel like this sort of thing would have been noticed by now...
Reporter | ||
Comment 4•5 years ago
|
||
@mconley Thanks for looking over this so quickly!
I, also, can confirm that after trying the STRs you provided above, happens as you mentioned.
Comment 5•5 years ago
|
||
This is probably not worth fixing right now until we land changes for rebooting session history in the parent. bug 1570255 might be of interest but it's only the beginning of the reboot :)
Assignee | ||
Comment 6•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 8•5 years ago
|
||
bugherder |
Reporter | ||
Comment 9•5 years ago
|
||
I have verified that the issue is no longer reproducible on Firefox Nightly 77.0a1 (Build ID) using Windows 10 x64, Linux Ubuntu 18.04 and Mac OS 10.15.
Scroll position is maintained for the second time the user comes back to the page, and after.
Reporter | ||
Updated•5 years ago
|
Description
•