Bug 1630234 - Manually persist layout history state when process flipping. r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D72399